# airflow-dag-gantt

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/airflow_dag_gantt/: __init__.py  plugin.py
src/airflow_dag_gantt/static/: index.html
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
ui/src/: dev.tsx  global.d.ts  main.tsx  theme.ts  types.ts
ui/src/pages/: GanttPage.tsx
